--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,14 +6,14 @@ pkg_check_modules(LIBUDEV REQUIRED libudev)
 if (WITH_SERVER)
   message("Building server")
   # pkg_check_modules(LIBEVDEV REQUIRED libevdev)
-  add_executable(hidpservd server.c common.c)
+  add_executable(hidpservd server.cpp common.cpp)
   target_include_directories(hidpservd PUBLIC ${LIBUDEV_INCLUDE_DIRS})
   target_link_libraries(hidpservd ${LIBUDEV_LIBRARIES})
 endif()
 
 if (WITH_CLIENT)
   message("Building client")
-  add_executable(hidpclient client.c common.c)
+  add_executable(hidpclient client.cpp common.cpp)
   target_include_directories(hidpclient PUBLIC ${LIBUDEV_INCLUDE_DIRS})
   target_link_libraries(hidpclient ${LIBUDEV_LIBRARIES})
 endif()
