Added test util

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,3 +17,10 @@ if (WITH_CLIENT)
   target_include_directories(hidpclient PUBLIC ${LIBUDEV_INCLUDE_DIRS})
   target_link_libraries(hidpclient ${LIBUDEV_LIBRARIES})
 endif()
+
+if (WITH_TEST)
+  message("Building test")
+  add_executable(hid_cat_test test.cpp)
+  target_include_directories(hid_cat_test PUBLIC ${LIBUDEV_INCLUDE_DIRS})
+  target_link_libraries(hid_cat_test ${LIBUDEV_LIBRARIES})
+endif()
