--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,14 +6,18 @@ pkg_check_modules(LIBUDEV REQUIRED libudev)
 if (WITH_SERVER)
   message("Building server")
   # pkg_check_modules(LIBEVDEV REQUIRED libevdev)
-  add_executable(hidpservd server.cpp common.cpp)
-  target_include_directories(hidpservd PUBLIC ${LIBUDEV_INCLUDE_DIRS})
-  target_link_libraries(hidpservd ${LIBUDEV_LIBRARIES})
+  pkg_check_modules(LIBUUID REQUIRED uuid)
+  add_executable(hidpserver hidp_net.cc hidp_proto.cc hidp_device.cc hidp_server.cc hidp_common.cc)
+  target_compile_definitions(hidpserver PUBLIC -DWITH_UDEV -DWITH_UUID -DWITH_INPUTDEVICE_MONITOR)
+  target_include_directories(hidpserver PUBLIC ${LIBUDEV_INCLUDE_DIRS})
+  target_include_directories(hidpserver PUBLIC ${LIBUUID_INCLUDE_DIRS})
+  target_link_libraries(hidpserver ${LIBUDEV_LIBRARIES})
+  target_link_libraries(hidpserver ${LIBUUID_LIBRARIES})
 endif()
 
 if (WITH_CLIENT)
   message("Building client")
-  add_executable(hidpclient client.cpp common.cpp)
+  add_executable(hidpclient hidp_net.cc hidp_proto.cc hidp_device.cc hidp_client.cc hidp_common.cc)
 endif()
 
 if (WITH_TEST)
